Fix 'Umbrello wont create a UML diagram relation between two objects'

BUG:409161
FIXED-IN: 2.28.3 (KDE Applications 19.04.3)